--- a/.github/workflows/gh-pages.yaml
+++ b/.github/workflows/gh-pages.yaml
@@ -22,7 +22,13 @@ jobs:
           # extended: true
 
       - name: Build
-        run: hugo --minify
+        run: |
+          hugo --minify
+          cd resume-site
+          hugo --minify
+          cp -r public/images ../public/resume/
+          cp -f public/index.html ../public/resume/
+          cp -f public/*.css ../public/
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
