--- a/config.toml
+++ b/config.toml
@@ -70,3 +70,9 @@ missingBackButtonLabel = "Back to home page"
 [languages.en.params.logo]
 logoText = "TireFire.dev"
 logoHomeLink = "/"
+
+[languages.en.menu]
+    [[languages.en.menu.main]]
+      identifier = "about"
+      name = "About"
+      url = "/about"
